--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,7 @@
 {
   "recommendations": [
     "antfu.file-nesting",
-    "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
-    "EditorConfig.EditorConfig",
+    "EditorConfig.EditorConfig"
   ]
 }
