--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "nitropack dev",
@@ -9,16 +10,15 @@
     "test": "vitest"
   },
   "dependencies": {
-    "cron": "^3.0.0",
-    "zod": "^3.22.3"
+    "cron": "^3.1.6",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^18.18.3",
-    "eslint": "^8.50.0",
-    "eslint-config-unjs": "^0.2.1",
-    "nitropack": "^2.6.3",
-    "prettier": "^3.0.3",
-    "typescript": "^5.2.2",
+    "@antfu/eslint-config": "^2.0.0",
+    "@types/node": "^18.18.12",
+    "eslint": "^8.54.0",
+    "nitropack": "^2.8.0",
+    "typescript": "^5.3.2",
     "vitest": "^0.34.6"
   }
 }
